--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I Love Alpine</title>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    button[data-s = "true"]{
-        background-color: antiquewhite;
-    }
-</style>
 <body>
 <div x-data="{a: 0}">
     <button @click="a--">-</button>
